Cleanup the concept of orderedGroups. Just use a single way of accessing the groups. Simplify testing by introducing a GroupList to contain all acces to groups and nodes.